# mcp-gateway-rs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  clippy.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docker_image_ci.yaml
assets/: tls_certificate.pem
assets/contextforgeCA/: contextforge-client.cert.pem  contextforge-client.key.pem  contextforge-server.cert.pem  contextforge-server.key.pem  contextforge.ca.cert.pem  contextforge.ca.key.pem  contextforge.intermediate.ca-chain.cert.pem  contextforge.intermediate.cert.pem  contextforge.intermediate.key.pem
crates/contextforge-gateway-rs/: Cargo.toml
crates/contextforge-gateway-rs-apis/: Cargo.toml
crates/contextforge-gateway-rs-apis/src/: lib.rs  main.rs  runtime_plugin_config.rs  user.rs  user_store.rs
crates/contextforge-gateway-rs-cpex/: Cargo.toml
crates/contextforge-gateway-rs-cpex-runtime/: Cargo.toml
crates/contextforge-gateway-rs-cpex-runtime/src/: config.rs  error.rs  factory.rs  handle.rs  lib.rs  pipeline.rs  runtime.rs
crates/contextforge-gateway-rs-cpex-runtime/tests/: gateway_tool_hooks.rs  runtime_config.rs  runtime_lifecycle.rs  runtime_reload.rs  runtime_unit.rs
crates/contextforge-gateway-rs-cpex-runtime/tests/support/: config.rs  gateway.rs  mod.rs  runtime.rs
crates/contextforge-gateway-rs-cpex/src/: cmf.rs  config.rs  error.rs  factory.rs  handle.rs  hooks.rs  lib.rs  pipeline.rs  runtime.rs
crates/contextforge-gateway-rs-cpex/tests/: config_decode.rs  gateway_tool_hooks.rs  runtime_config.rs  runtime_lifecycle.rs  runtime_reload.rs
crates/contextforge-gateway-rs-cpex/tests/support/: gateway.rs  plugin.rs  tool.rs
crates/contextforge-gateway-rs-lib/: Cargo.toml
crates/contextforge-gateway-rs-lib/src/: common.rs  const_values.rs  lib.rs  runtime_hooks.rs  tools.rs
crates/contextforge-gateway-rs-lib/src/gateway/: backend_notifications.rs  mcp_call_validator.rs  mcp_gateway.rs  mod.rs  session_manager.rs
crates/contextforge-gateway-rs-lib/src/gateway/mcp_gateway/: handlers.rs  lifecycle.rs  routing.rs
crates/contextforge-gateway-rs-lib/src/gateway/miri_checks/: config_serialization.rs  namespace_routing.rs
crates/contextforge-gateway-rs-lib/src/gateway/session_store/: local_session_store.rs  mod.rs  redis_session_store.rs
crates/contextforge-gateway-rs-lib/src/layers/: claims_id.rs  session_id.rs  user_config_store.rs  virtual_host_id.rs
crates/contextforge-gateway-rs-lib/src/tests/: gateway_end_to_end.rs  mock_counter.rs  mocked_user_config_store.rs  mod.rs
crates/contextforge-gateway-rs-lib/src/transports/: mod.rs  tcp.rs  tls.rs
crates/contextforge-gateway-rs-lib/src/user_config_store/: mod.rs  redis_config_store.rs
crates/contextforge-gateway-rs-lib/tests/: cpex_runtime_config.rs  cpex_runtime_lifecycle.rs  cpex_runtime_reload.rs  gateway_end_to_end.rs  gateway_list_tools.rs  plugin_gateway_end_to_end.rs
crates/contextforge-gateway-rs-lib/tests/support/: auth.rs  config.rs  gateway.rs  list_tools_gateway.rs  mock_counter.rs  mod.rs  plugin.rs  runtime.rs  user_config_store.rs
crates/contextforge-gateway-rs/src/: logging.rs  main.rs  runtime.rs  test_plugins.rs
crates/contextforge-load-test/: Cargo.toml
crates/contextforge-load-test/src/: main.rs
crates/mcp-gateway-rs/: Cargo.toml
crates/mcp-gateway-rs-lib/: Cargo.toml  Cargo.toml~
crates/mcp-gateway-rs-lib/src/: common.rs  lib.rs  tcp.rs  tools.rs
crates/mcp-gateway-rs-lib/src/gateway/: gateway.rs  mcp_call_validator.rs  mod.rs  session_manager.rs
crates/mcp-gateway-rs-lib/src/gateway/session_store/: mod.rs  redis_session_store.rs
crates/mcp-gateway-rs-lib/src/layers/: claims_id.rs  mod.rs  session_id.rs  user_config_store.rs  virtual_host_id.rs
crates/mcp-gateway-rs-lib/src/user_config_store/: inmemory_config_store.rs  mod.rs  redis_config_store.rs
crates/mcp-gateway-rs/src/: logging.rs  main.rs  main.rs~  runtime.rs
crates/mcp-load-test/: Cargo.toml
crates/mcp-load-test/src/: main.rs
docker/: Dockerfile  Dockerfile_dev  docker-compose-local.yaml
schemas/: user_config.json
