[workspace]
members = [
    "crates/contextforge-gateway-rs",
    "crates/contextforge-gateway-rs-lib",
    "crates/contextforge-load-test",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
license-file = "./LICENSE.md"
keywords = ["mcp", "gateway", "rust", "contextforge", "a2a", "ai", "llm"]
homepage = "https://github.com/contextforge-gateway-rs/contextforge-gateway-rs"
readme = "./README.md"
repository = "https://github.com/contextforge-gateway-rs/contextforge-gateway-rs"


[workspace.dependencies]

contextforge-gateway-rs = { path = "./crates/contextforge-gateway-rs" }
contextforge-gateway-rs-lib = { path = "./crates/contextforge-gateway-rs-lib", features = [
    "with_tools",
] }

rmcp = { version = "1.6.0", features = [
    "server",
    "client",
    "auth",
    "transport-streamable-http-server",
    "reqwest",
    "transport-streamable-http-client-reqwest",
    "elicitation",
], git = "https://github.com/contextforge-gateway-rs/mcp-rust-sdk", branch = "enabling_propagation_of_new_session_id_2", commit="d07fa4f8d7978cd0829a09fab181437b99a81878" }

serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
axum = "0.8"
anyhow = "1.0"
tower-http = { version = "0.6.8", features = ["full"] }
tower-layer = "0.3.3"
tower = "0.5.3"
http = "1.4.0"
axum-jwt-auth = "0.6.3"
futures = { version = "0.3", features = ["std", "alloc"] }
jsonwebtoken = "10.3.0"
chrono = "0.4.44"
redis = { version = "1.2.1", features = [
    "default",
    "tokio-rustls-comp",
    "tls-rustls",
] }
clap = { version = "4.5.60", features = ["derive", "env"] }
thiserror = "2.0.18"
openid = "0.23.0"
url = "2.5.8"
rmp-serde = "1.3.1"
async-trait = "0.1.89"
http-body = "1.0.1"
http-body-util = "0.1.3"
bytes = "1.11.1"
reqwest = "0.13"
itertools = "0.14"
typed-builder = "0.23.2"
rustls = "0.23"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "debuginfo"


[profile.release-debuginfo]
debug = "full"
inherits = "release"
panic = "abort"
split-debuginfo = "packed"
strip = false

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
#struct_field_names = "allow"
cast_sign_loss = "allow"
clone_on_ref_ptr = "warn"
disallowed-methods = "deny"
doc_markdown = "allow"
get_unwrap = "warn"
if_then_some_else_none = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
print_stderr = "warn"
print_stdout = "warn"
str_to_string = "warn"
string_to_string = "warn"
todo = "warn"
unwrap_used = "warn"
