
[package]
name = "contextforge-gateway-rs-apis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
keywords.workspace = true


[dependencies]
serde= {workspace = true, features=["derive"]}
serde_json.workspace = true
url = {workspace  = true, features = ["serde"] }
schemars = {version= "1.2.1", features = ["url2"]}
jsonschema = "0.46.4"


[lints]
workspace = true
