
[package]
name = "contextforge-gateway-rs-apis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true


[dependencies]
cpex-core.workspace = true
serde= {workspace = true, features=["derive"]}
serde_json.workspace = true
url = {workspace  = true, features = ["serde"] }
schemars = {version= "1.2.1", features = ["url2","preserve_order"]}

[lints]
workspace = true

[lib]
test = false
doctest = false
