[package]
name = "contextforge-gateway-rs-cpex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
arc-swap = "1.7"
async-trait.workspace = true
contextforge-gateway-rs-lib.workspace = true
cpex-core.workspace = true
redis.workspace = true
rmcp.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
axum.workspace = true
contextforge-gateway-rs-apis.workspace = true
futures.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
openport = { version = "0.1.1", features = ["rand"] }
reqwest.workspace = true

[lints]
workspace = true
