[package]
name = "contextforge-gateway-rs-cpex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
arc-swap.workspace = true
async-trait.workspace = true
cpex-core.workspace = true
redis.workspace = true
rmcp.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
