
[package]
name = "contextforge-gateway-rs-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
keywords.workspace = true


[dependencies]
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
anyhow.workspace = true
tower-http.workspace = true
tower-layer.workspace = true
tower.workspace = true
http.workspace = true
axum-jwt-auth.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
redis.workspace = true
clap.workspace = true
thiserror.workspace = true
openid.workspace = true
url.workspace = true
rmp-serde.workspace = true
async-trait.workspace = true
http-body.workspace = true
http-body-util.workspace = true
bytes.workspace = true
reqwest.workspace = true
itertools.workspace = true
uuid = { version = "1.23", features = ["v4"] }
lru_time_cache = "0.11.11"
hyper-util = "0.1.20"
hyper = { version = "1.4.0" }
rustls = "0.23"
rustls-pki-types = { version = "1.14.1", features = ["std"] }
tokio-rustls = "0.26.4"

[features]
default = []
with_tools = []


[lints]
workspace = true
