
[package]
name = "contextforge-gateway-rs-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
keywords.workspace = true


[dependencies]
contextforge-gateway-rs-apis.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
anyhow.workspace = true
tower-http.workspace = true
tower-layer.workspace = true
tower.workspace = true
http.workspace = true
axum-jwt-auth.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
redis.workspace = true
clap.workspace = true
thiserror.workspace = true
openid.workspace = true
url.workspace = true
rmp-serde.workspace = true
async-trait.workspace = true
http-body.workspace = true
http-body-util.workspace = true
bytes.workspace = true
reqwest.workspace = true
itertools.workspace = true
uuid = { version = "1.23", features = ["v4"] }
lru_time_cache = "0.11.11"
hyper-util = "0.1.20"
hyper = { version = "1.4.0" }
rustls.workspace = true
rustls-pki-types = { version = "1.14.1", features = ["std"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.4"
typed-builder.workspace = true


[features]
default = []
with_tools = []


[dev-dependencies]
openport = { version = "0.1.1", features = ["rand"] }
mockito = "1.7.2"
axum-test = "20.0.0"
test-log = "0.2.20"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }

[lints]
workspace = true
