
[package]
name = "contextforge-gateway-rs-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true


[dependencies]
contextforge-gateway-rs-apis.workspace = true
contextforge-gateway-rs-cpex.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tower-layer.workspace = true
tower.workspace = true
http.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
redis.workspace = true
clap.workspace = true
thiserror.workspace = true
rmp-serde.workspace = true
async-trait.workspace = true
reqwest.workspace = true
itertools.workspace = true
uuid = { version = "1.23", features = ["v4"] }
lru_time_cache = "0.11.11"
hyper-util = "0.1.20"
hyper = { version = "1.4.0" }
rustls.workspace = true
rustls-pki-types = { version = "1.14.1", features = ["std","alloc"] }
tokio-rustls = "0.26.4"
typed-builder.workspace = true


[features]
default = []
with_tools = []


[dev-dependencies]
cpex-core.workspace = true
openport = { version = "0.1.1", features = ["rand"] }
test-log = "0.2.20"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
futures.workspace = true

[lints]
workspace = true

[lib]
doctest = false
