[package]
name = "contextforge-gateway-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true


[dependencies]
anyhow.workspace = true
contextforge-gateway-rs-cpex-runtime.workspace = true
contextforge-gateway-rs-lib.workspace = true
cpex-payload-marker = { git = "https://github.com/contextforge-gateway-rs/cpex-plugins-rs", rev = "07af215bc9f00a6c3cd6d4838479518569607581", optional = true }
cpex-text-prefixer = { git = "https://github.com/contextforge-gateway-rs/cpex-plugins-rs", rev = "07af215bc9f00a6c3cd6d4838479518569607581", optional = true }
cpex-tool-namespace = { git = "https://github.com/contextforge-gateway-rs/cpex-plugins-rs", rev = "07af215bc9f00a6c3cd6d4838479518569607581", optional = true }
clap.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
num_cpus = "1.17.0"
rmcp.workspace = true
tikv-jemallocator = "0.6.1"
rustls.workspace = true

[features]
test-plugins = ["dep:cpex-payload-marker", "dep:cpex-text-prefixer", "dep:cpex-tool-namespace"]

[lints]
workspace = true
