[package]
name = "contextforge-load-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true



[dependencies]
goose = { git = "https://github.com/tag1consulting/goose" }
log = "0.4.29"
tokio.workspace = true
http.workspace = true
reqwest.workspace = true
uuid = { version = "1.23.1", features = ["v4"] }


[lints]
workspace = true
